--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="/static/styles/main.css" />
   </head>
   <body>
-    <div class="test">Hello!!!</div>
+    <div class="test">Hello!!!!</div>
   </body>
 </html>
